new code for monte carlo tree search

--- a/report/decision_analytic/mdm/latex/bibliography.bib
+++ b/report/decision_analytic/mdm/latex/bibliography.bib
@@ -9,13 +9,24 @@
   publisher={Wiley Online Library}
 }
 
+@article{bruinsma2016active,
+  title={Active surveillance for prostate cancer: a narrative review of clinical guidelines},
+  author={Bruinsma, Sophie M and Bangma, Chris H and Carroll, Peter R and Leapman, Michael S and Rannikko, Antti and Petrides, Neophytos and Weerakoon, Mahesha and Bokhorst, Leonard P and Roobol, Monique J and Ehdaie, Behfar and others},
+  journal={Nature Reviews Urology},
+  volume={13},
+  number={3},
+  pages={151--167},
+  year={2016},
+  publisher={Nature Publishing Group}
+}
+
 @article{nieboer2018active,
   title={Active surveillance: a review of risk-based, dynamic monitoring},
   author={Nieboer, Daan and Tomer, Anirudh and Rizopoulos, Dimitris and Roobol, Monique J and Steyerberg, Ewout W},
   journal={Translational andrology and urology},
   volume={7},
   number={1},
-  pages={106},
+  pages={106--115},
   year={2018},
   publisher={AME Publications}
 }
@@ -64,6 +75,16 @@
   publisher={Elsevier}
 }
 
+@article{coley2017,
+title = {Prediction of the Pathologic {Gleason} Score to Inform a Personalized Management Program for Prostate Cancer},
+journal = {European Urology},
+volume = {72},
+number = {1},
+pages = {135--141},
+year = {2017},
+author = {Coley, Rebecca Yates and Zeger, Scott L and Mufaddal Mamawala and Pienta, Kenneth J and Carter, Herbert Ballentine}
+}
+
 @article{carvalho,
   title={Estimating the risks and benefits of active surveillance protocols for prostate cancer: a microsimulation study},
   author={de Carvalho, Tiago M and Heijnsdijk, Eveline AM and de Koning, Harry J},
@@ -87,7 +108,7 @@
 }
 
 @article{etzioni2002overdiagnosis,
-  title={Overdiagnosis due to prostate-specific antigen screening: lessons from US prostate cancer incidence trends},
+  title={Overdiagnosis due to prostate-specific antigen screening: lessons from {US} prostate cancer incidence trends},
   author={Etzioni, Ruth and Penson, David F and Legler, Julie M and Di Tommaso, Dante and Boer, Rob and Gann, Peter H and Feuer, Eric J},
   journal={Journal of the National Cancer Institute},
   volume={94},
@@ -193,7 +214,7 @@ publisher={Foundation for Open Access Statistics}
 }
 
 @article{schroder1992tnm,
-  title={The TNM classification of prostate cancer},
+  title={The {TNM} classification of prostate cancer},
   author={Schr{\"o}der, FH and Hermanek, P and Denis, L and Fair, WR and Gospodarowicz, MK and Pavone-Macaluso, M},
   journal={The Prostate},
   volume={21},
