--- a/report/decision_analytic/mdm/latex/mainmatter/abstract.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/abstract.tex
@@ -1,15 +1,15 @@
 % !TEX root =  ../main_manuscript.tex 
 
 \begin{abstract}
-\textbf{Background.} Low-risk prostate cancer patients enrolled in active surveillance (AS) programs commonly undergo biopsies for examination of cancer progression. Biopsies are conducted as per a fixed and frequent schedule (e.g. annual biopsies), same for all patients. Since biopsies are burdensome, patients do not always comply with the schedule, which increases the risk of delayed detection of cancer progression.
+\textbf{Background.} Low-risk prostate cancer patients enrolled in active surveillance (AS) programs commonly undergo biopsies for examination of cancer progression. Biopsies are conducted as per a fixed and frequent schedule (e.g., annual biopsies). Since biopsies are burdensome, patients do not always comply with the schedule, which increases the risk of delayed detection of cancer progression.
 
 \textbf{Objective.} Our aim is to better balance the number of biopsies (burden) and the delay in detection of cancer progression (less is beneficial), by personalizing the decision of conducting biopsies.
 
-\textbf{Data Sources.} We use patient data of the world's largest AS program called PRIAS. It has 5270 patients, 866 cancer progressions, and an average of 9 prostate-specific antigen (PSA) and 5 digital rectal examination (DRE) measurements per patient.
+\textbf{Data Sources.} We use patient data of the world's largest AS program (PRIAS). It has enrolled 5270 patients, 866 cancer progressions, and an average of 9 prostate-specific antigen (PSA) and 5 digital rectal examination (DRE) measurements per patient.
 
-\textbf{Methods.} Using joint models for time-to-event and longitudinal data, we jointly model the historical DRE and PSA measurements, and biopsy results of a patient at each follow-up visit. This results in a visit and patient-specific, cumulative risk of cancer progression. If this risk is above a certain threshold, we schedule a biopsy. We compare this personalized approach with the currently practiced biopsy schedules via an extensive and realistic simulation study, based on a replica of the patients from the PRIAS program.
+\textbf{Methods.} Using joint models for time-to-event and longitudinal data, we model the historical DRE and PSA measurements, and biopsy results of a patient at each follow-up visit. This results in a visit and patient-specific cumulative risk of cancer progression. If this risk is above a certain threshold, we schedule a biopsy. We compare this personalized approach with the currently practiced biopsy schedules via an extensive and realistic simulation study, based on a replica of the patients from the PRIAS program.
 
-\textbf{Results.} Compared to the currently practiced schedules, the personalized approach saves one to seven biopsies per patient, depending upon their time of cancer progression. However, the corresponding delay in the detection of cancer progression due to the personalized approach remains comparable with that of the biopsy schedule of the PRIAS program.
+\textbf{Results.} Personalized approach saves a median of 6 biopsies (median:~4,~IQR:~3), compared to the annual schedule (median:~10,~IQR:~7). However, the delay in detection of progression for the personalized approach (median:~0.7 years,~IQR:~0.7 years) is similar to that of the annual schedule (median:~0.5 years,~IQR:~0.5 years).
 
-\textbf{Conclusions.} We conclude that the personalized schedules better balance the number of biopsies per detected cancer progression.
+\textbf{Conclusions.} We conclude that personalized schedules better balance the number of biopsies per detected progression for men with low-risk prostate cancer.
 \end{abstract}
