--- a/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/discussion.tex
@@ -1,12 +1,12 @@
 % !TEX root =  ../main_manuscript.tex
 \section{Discussion}
 \label{sec:discussion}
-In this paper, we proposed a methodology for making personalized biopsy decisions for prostate cancer patients included in active surveillance (AS) programs. Our goal was to better balance the number of biopsies, and the delay in detection of cancer progression, than existing biopsy schedules. The proposed methodology combines a patient's observed DRE and PSA measurements, and the time of latest biopsy, into a cancer progression risk function. If the cumulative risk of cancer progression at a follow-up visit is above a certain threshold, then a biopsy is scheduled. We conducted a simulation study to compare the personalized approach for biopsies with the currently practiced fixed/heuristic biopsy schedules common for all patients, and the PRIAS schedule (see \hyperref[sec:introduction]{Introduction}). We found that the personalized schedule which uses 10\% risk threshold at all follow-up visits is dominant over the PRIAS schedule, biennial schedule of biopsies, and biopsies every one and a half years. This personalized schedule not only schedules less number of biopsies than the aforementioned currently practiced schedules, but the delay in detection of cancer progression is also either equal or less. The personalized schedule which uses risk threshold chosen on the basis of classification accuracy ($\mbox{F}_1$ score) is dominant over the triennial schedule of biopsies. The personalized schedule which uses 5\% risk threshold schedules less biopsies than the annual schedule, while the delay is only trivially more than the annual schedule. These results conclude that the personalized schedules better balance the number of biopsies, and the delay in detection of cancer progression than the currently practiced schedules.
+We proposed a methodology which better balances the number of biopsies, and the delay in detection of cancer progression than the currently practiced biopsy schedules, for low-risk prostate cancer patients enrolled in active surveillance (AS) programs. The proposed methodology combines a patient's observed DRE and PSA measurements, and the time of latest biopsy, into a personalized cancer progression risk function. If the cumulative risk of cancer progression at a follow-up visit is above a certain threshold, then a biopsy is scheduled. We conducted an extensive simulation study, based on a replica of the patients from the PRIAS program, to compare this personalized approach for biopsies with the currently practiced biopsy schedules. We found personalized schedules to be dominant over many of the current biopsy schedules (see \hyperref[sec:results]{Results}).
 
-The main reason for better performance of personalized schedules is that they account for the variation in cancer progression rate between patients, and also over time within the same patient. In contrast, the existing fixed/heuristic schedules ignore that roughly 50\% patients never progress in the first ten years of follow-up (\textit{slow progressing} patients) and do not require biopsies. While \textit{fast progressing} patients require early detection, but existing methods of identifying these patients, such as the use of PSA doubling time in PRIAS, inappropriately assume that PSA evolves linearly over time. Thus, they may not correctly identify such patients. The personalized approach however, models the PSA profiles non-linearly. Furthermore, it appends information from PSA with information from DRE and previous biopsy results, and combines them into a cancer progression risk function. The risk function is a finer quantitative measure than individual data measurements observed for the patients. Risk is also easy to understand for both patients and doctors. Consequently, we expect that a more informed decision of biopsy can be made. 
+The main reason for better performance of personalized schedules is that they account for the variation in cancer progression rate between patients, and also over time within the same patient. In contrast, the existing fixed/heuristic schedules ignore that roughly 50\% patients never progress in the first ten years of follow-up (\textit{slow progressing} patients) and do not require biopsies. The \textit{fast progressing} patients require early detection. However, existing methods of identifying these patients, such as the use of PSA doubling time in PRIAS, inappropriately assume that PSA evolves linearly over time. Thus, they may not correctly identify such patients. The personalized approach however, models the PSA profiles non-linearly. Furthermore, it appends information from PSA with information from DRE and previous biopsy results, and combines them into single a cancer progression risk function. The risk function is a finer quantitative measure than individual data measurements observed for the patients. In comparison to decision making with flowcharts, the risk as a single measure of patient's underlying state of disease, may facilitate shared decision making for biopsies.
 
-Existing work on mitigating the issue of non-compliance of biopsies and/or reducing the burden of biopsies in AS, primarily advocates less frequent schedule of biopsies. To our knowledge, risk based biopsy schedules have not been explored yet in AS \cite{nieboer2018active}. However, the results that we estimated for fixed/heuristic schedules are comparable with corresponding results obtained in existing work \cite{inoue2018comparative}, even though the AS cohorts are not same. Unless the cohorts differ significantly in patient population, the results for personalized schedules may also be valid in other cohorts. 
+Existing work on reducing the burden of biopsies in AS, primarily advocates less frequent heuristic schedules of biopsies \citep{inoue2018comparative} (e.g., biopsies biennially instead of annually). To our knowledge, risk based biopsy schedules have not been explored yet in AS \cite{nieboer2018active,bruinsma2016active}. The part of our results pertaining to the fixed/heuristic schedules, is comparable with corresponding results obtained in existing work \cite{inoue2018comparative}, even though the AS cohorts are not same. Thus, we anticipate similar validity for the results pertaining to the personalized schedules.
 
-A limitation of the personalized approach is that the choice of risk threshold is not straightforward, as different thresholds lead to different combinations of number of biopsies and delay in detection of cancer progression. An approach is to choose a risk threshold which leads to personalized schedule dominant over the currently practiced schedules, for a given delay. Although dominance may not guarantee compliance, it may be likely, because personalized schedules are less burdensome. A second limitation is that the results that we presented are valid only in a 10 year follow-up period, whereas prostate cancer is a slow progressing disease. Thus more detailed results, especially for \textit{slow progressing} patients cannot be estimated. However, very few AS cohorts have a longer follow-period than PRIAS. Another limitation of risk based personalized schedules is that the biopsy decisions do not optimize for a reward/penalty function. While the risk itself can be interpreted as a ratio of immediate reward/penalty of biopsies \cite{vickers2006decision}, but future rewards/penalties need to considered as well.
+A limitation of the personalized approach is that the choice of risk threshold is not straightforward, as different thresholds lead to different combinations of number of biopsies and delay in detection of cancer progression. An approach is to choose a risk threshold which leads to personalized schedule dominant (e.g., 10\% risk) over the currently practiced schedules, for a given delay. Since personalized biopsy schedules are less burdensome, they may lead to better compliance. A second limitation is that the results that we presented are valid only in a 10 year follow-up period, whereas prostate cancer is a slow progressing disease. Thus more detailed results, especially for \textit{slow progressing} patients cannot be estimated. However, very few AS cohorts have a longer follow-period than PRIAS \cite{bruinsma2016active}. Another limitation is that our results are not valid when the patient data is missing not at random (MNAR).
 
-There are multiple ways to extend the personalized decision making approach. One such way is to account for competing risks (see \hyperref[subsec:study_population]{Study Population}) in the joint model. Since biopsy Gleason grading is susceptible to inter-observer variation \cite{Gleason_interobs_var}, accounting for it in our model will also be interesting to investigate further. To improve the decision making methodology, future consequences of a biopsy can be accounted in the model by combining Markov decision processes with joint models for time-to-event and longitudinal data. There is also potential for including diagnostic information from magnetic resonance imaging (MRI), and quality of life measures in our model. However, given the scarceness of such information in the dataset, including it in the current model may not be feasible. Lastly, we intend to further validate our results in a multi-center AS cohort, and subsequently develop a web-application to assist doctors in making personalized decisions for biopsies.
+There are multiple ways to extend the personalized decision making approach. One such way is to account for competing risks (see Table \ref{table:prias_summary}) in the joint model. Since biopsy Gleason grading is susceptible to inter-observer variation \cite{coley2017}, accounting for it in our model will also be interesting to investigate further. To improve the decision making methodology, future consequences of a biopsy can be accounted in the model by combining Markov decision processes with joint models for time-to-event and longitudinal data. There is also potential for including diagnostic information from magnetic resonance imaging (MRI), and quality of life measures in our model. However, given the scarceness of such information in the dataset, including it in the current model may not be feasible. We intend to further validate our results in a multi-center AS cohort, and subsequently develop a web-application to assist in making shared decisions for biopsies.
