--- a/report/decision_analytic/mdm/latex/mainmatter/results.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/results.tex
@@ -5,7 +5,7 @@
 From the joint model fitted to the PRIAS dataset, we found that both $\log_2 \{\mbox{PSA} + 1\}$ velocity,  and log odds of having $\mbox{DRE} > \mbox{T1c}$  were significantly associated with the hazard of cancer progression. For any patient, an increase in $\log_2 \{\mbox{PSA} + 1\}$ velocity from -0.03 to 0.16 (first and third quartiles of the fitted velocities, respectively) corresponds to a 1.94 fold increase in the hazard of cancer progression. Whereas, an increase in odds of $\mbox{DRE} > \mbox{T1c}$ from 0.001 to 0.01 (first and third quartiles of the fitted odds, respectively) corresponds to a 1.40 fold increase in the hazard of cancer progression. Detailed results pertaining to the fitted joint model are presented in Appendix B.
 
 \subsection{Comparison of Various Approaches for Biopsies}
-From the simulation study, we obtain the number of biopsies and the delay in detection of cancer progression for each of the ${\mbox{500} \times \mbox{250}}$ test patients using different schedules. The corresponding median number of biopsies and delay are shown in Figure \ref{fig:better_balance_results}. The personalized and PRIAS approaches fall in the region of better balance between the number of biopsies and the delay, than fixed/heuristic schedules. We next evaluate these schedules on the basis of both median and interquartile range (IQR) of the number of biopsies and delay. For brevity, only the most widely used annual and PRIAS schedules, the proposed personalized approach with fixed risk thresholds of 5\% and 10\%, and visit-specific threshold chosen using $\mbox{F}_1$ score are discussed next (see Appendix~C for remaining).
+From the simulation study, we obtain the number of biopsies and the delay in detection of cancer progression for each of the ${\mbox{500} \times \mbox{250}}$ test patients using different schedules. Figure \ref{fig:better_balance_results} shows that the personalized and PRIAS approaches fall in the region of better balance between the number of biopsies and the delay, than fixed/heuristic schedules. We next evaluate these schedules on the basis of both median and interquartile range (IQR) of the number of biopsies and delay (see Figure~\ref{fig:sim_res_combined}). For brevity, only the most widely used annual and PRIAS schedules, the proposed personalized approach with fixed risk thresholds of 5\% and 10\%, and visit-specific threshold chosen using $\mbox{F}_1$ score are discussed next (see Appendix~C for remaining).
 
 \begin{figure}[!htb]
 \captionsetup{justification=justified}
@@ -23,8 +23,11 @@ Since patients have varying cancer progression speeds, the impact of each schedu
 \label{fig:sim_res_combined}
 \end{figure}
 
-The boxplots in Figure~\ref{fig:sim_res_combined}, show the variation in the number of biopsies, and the delay in detection of cancer progression, due to various biopsy schedules, for these three types of patients. For \textit{fast progressing} patients (Panel~A,~Figure~\ref{fig:sim_res_combined}), we can see that the personalized schedules with a fixed 10\% risk threshold and visit-specific threshold chosen using $\mbox{F}_1$ score, reduce one biopsy for 50\% of the patients, compared to PRIAS and annual schedule. Despite this, the delay due to personalized schedule with fixed 10\% risk threshold (median: 0.7 years, IQR: 0.7 years), and the currently practiced annual (median: 0.6 years, IQR: 0.6 years) and PRIAS schedule (median: 0.7 years, IQR: 0.7 years), is similar.
+ For \textit{fast progressing} patients (Panel~A,~Figure~\ref{fig:sim_res_combined}), we note that the personalized schedules with a fixed 10\% risk threshold and visit-specific threshold chosen using $\mbox{F}_1$ score, reduce one biopsy for 50\% of the patients, compared to PRIAS and annual schedule. Despite this, the delay is similar for personalized schedule with fixed 10\% risk threshold (median:~0.7~years,~IQR:~0.7~years), and the currently practiced annual (median:~0.6~years,~IQR:~0.6~years) and PRIAS schedules (median:~0.7~years,~IQR:~0.7~years).
 
-For \textit{intermediate progressing} patients (Panel~A,~Figure~\ref{fig:sim_res_combined}), we can see that the delay due to personalized schedule with fixed 5\% risk threshold (median: 0.6 years, IQR: 0.6 years) is comparable to that of annual schedule (median 0.5 years, IQR: 0.5 years). However, it schedules fewer biopsies (median: 6, IQR: 2) than the annual schedule (median: 7, IQR: 3). The delay for PRIAS (median: 0.7 years, IQR: 1 year) and personalized schedule with fixed 10\% risk (median: 0.7, IQR: 0.9) is similar, but the personalized approach schedules one less biopsy for 50\% of the patients. Although the approach with visit-specific risk threshold chosen using $\mbox{F}_1$ score schedules fewer biopsies than the 10\% fixed risk approach, but it also has a higher delay.
+For \textit{intermediate progressing} patients (Panel~A,~Figure~\ref{fig:sim_res_combined}), we note that the delay due to personalized schedule with fixed 5\% risk threshold (median:~0.6~years,~IQR:~0.6~years) is comparable to that of annual schedule (median 0.5~years,~IQR:~0.5~years). However, it schedules fewer biopsies (median:~6,~IQR:~2) than the annual schedule (median:~7,~IQR:~3). The delay for PRIAS (median:~0.7~years,~IQR:~1 year) and personalized schedule with fixed 10\% risk (median:~0.7,~IQR:~0.9) is similar, but the personalized approach schedules one less biopsy for 50\% of the patients. Although the approach with visit-specific risk threshold chosen using $\mbox{F}_1$ score schedules fewer biopsies than the 10\% fixed risk approach, but it also has a higher delay.
 
-The patients who are at the most advantage with the personalized schedules are the \textit{slow progressing} patients. These are a total of 50\% patients who did not progress during the entire study. Hence, the delay is not available for these patients (Panel~C of Figure~\ref{fig:sim_res_combined}). For all of these patients, annual schedule leads to 10 (unnecessary) biopsies. The PRIAS schedule, schedules a median of 6 biopsies (IQR: 4). In comparison, the biopsies scheduled by the personalized schedules using fixed 10\% risk threshold (median: 4, IQR: 2) and visit-specific risk chosen using $\mbox{F}_1$ score (median: 2, IQR: 2), are much fewer.
+The patients who are at the most advantage with the personalized schedules are the \textit{slow progressing} patients. These are a total of 50\% patients who did not progress during the entire study. Hence, the delay is not available for these patients (Panel~C of Figure~\ref{fig:sim_res_combined}). For all of these patients, annual schedule leads to 10 (unnecessary) biopsies. The PRIAS schedule, schedules a median of 6 biopsies (IQR: 4). In comparison, the biopsies scheduled by the personalized schedules using fixed 10\% risk threshold (median:~4,~IQR:~2) and visit-specific risk chosen using $\mbox{F}_1$ score (median:~2,~IQR:~2), are much fewer.
+
+Overall, we observed that the personalized schedule which uses 10\% risk threshold at all follow-up visits is dominant over the PRIAS schedule, biennial schedule of biopsies, and biopsies every one and a half years. This personalized schedule not only schedules less number of biopsies than the aforementioned currently practiced schedules, but the delay in detection of cancer progression is also either equal or less. The personalized schedule which uses risk threshold chosen on the basis of classification accuracy ($\mbox{F}_1$ score) is dominant over the triennial schedule of biopsies. The personalized schedule which uses 5\% risk threshold schedules less biopsies than the annual schedule, while the delay is only trivially more than the annual schedule.
+
