prediction joint outcome self code

--- a/report/decision_analytic/mdm/latex/bibliography.bib
+++ b/report/decision_analytic/mdm/latex/bibliography.bib
@@ -122,6 +122,8 @@ author = {Coley, Rebecca Yates and Zeger, Scott L and Mufaddal Mamawala and Pien
   title={The empirical distribution function with arbitrarily grouped, censored and truncated data},
   author={Turnbull, Bruce W},
   journal={Journal of the Royal Statistical Society. Series B (Methodological)},
+  volume={38},
+  number={3},
   pages={290--295},
   year={1976},
   publisher={JSTOR}
@@ -140,7 +142,7 @@ author = {Coley, Rebecca Yates and Zeger, Scott L and Mufaddal Mamawala and Pien
 
 @book{de1978practical,
   title={A practical guide to splines},
-  author={De Boor, Carl and De Boor, Carl and Math{\'e}maticien, Etats-Unis and De Boor, Carl and De Boor, Carl},
+  author={De Boor, Carl},
   volume={27},
   year={1978},
   publisher={Springer-Verlag New York}
@@ -152,7 +154,7 @@ author = {Coley, Rebecca Yates and Zeger, Scott L and Mufaddal Mamawala and Pien
   journal={Reviews in urology},
   volume={16},
   number={4},
-  pages={202},
+  pages={202--203},
   year={2014},
   publisher={MedReviews, LLC}
 }
@@ -175,7 +177,7 @@ publisher={Institute of Mathematical Statistics}
   journal={Journal of Clinical Oncology},
   volume={29},
   number={2},
-  pages={228},
+  pages={228--234},
   year={2011},
   publisher={American Society of Clinical Oncology}
 }
