--- a/report/decision_analytic/mdm/latex/main_manuscript.tex
+++ b/report/decision_analytic/mdm/latex/main_manuscript.tex
@@ -47,7 +47,7 @@ the Netherlands.}
 
 \maketitle
 
-\footnote{Financial support for this study was provided Netherlands Organization for Scientific Research's VIDI grant nr. 016.146.301, and Erasmus MC funding. The funding agreement ensured the authors’ independence in designing the study, interpreting the data, writing, and publishing the report.\\Word count: 3972}
+\footnote{Financial support for this study was provided entirely by a) VIDI grant nr. 016.146.301 from Nederlandse Organisatie voor Wetenschappelijk Onderzoek, which is the national research council of the Netherlands, and b) Erasmus University Medical Center funding. The funding agreement ensured the authors’ independence in designing the study, interpreting the data, writing, and publishing the report.\\Word count: 3888}
 \thefootnote
 
 \input{mainmatter/introduction}
@@ -66,7 +66,7 @@ the Netherlands.}
 \input{mainmatter/acknowledgement}
 
 \begin{sm}
-Supplementary material for this article are available after references and figures in this document.
+Supplementary material for this article, containing Appendix A--D are available in the file `supplementary.pdf'.
 \end{sm} 
 
 \bibliographystyle{SageV}
