--- a/report/decision_analytic/mdm/latex/mainmatter/acknowledgement.tex
+++ b/report/decision_analytic/mdm/latex/mainmatter/acknowledgement.tex
@@ -1,5 +1,9 @@
 % !TEX root =  ../main_manuscript.tex 
 
 \begin{acks}
-The first and last authors would like to acknowledge support by the Netherlands Organization for Scientific Research's VIDI grant nr. 016.146.301, and Erasmus MC funding. The authors also thank the Erasmus MC Cancer Computational Biology Center for giving access to their IT-infrastructure and software that was used for the computations and data analysis in this study. Lastly, we thank Joost Van Rosmalen from the Department of Biostatistics, Erasmus University Medical Center, for feedback on the manuscript.
+The first and last Authors would like to acknowledge support by Nederlandse Organisatie voor Wetenschappelijk Onderzoek (the national research council of the Netherlands) VIDI grant nr. 016.146.301, and Erasmus University Medical Center funding. The Authors also thank the Erasmus University Medical Center's Cancer Computational Biology Center for giving access to their IT-infrastructure and software that was used for the computations and data analysis in this study. Lastly, we thank Joost Van Rosmalen from the Department of Biostatistics, Erasmus University Medical Center, for feedback on the manuscript.
 \end{acks}
+
+\begin{dci}
+The Authors declare that there is no conflict of interest.
+\end{dci}
