--- a/report/decision_analytic/mdm/latex/supplementary/full_results.tex
+++ b/report/decision_analytic/mdm/latex/supplementary/full_results.tex
@@ -26,7 +26,7 @@ Risk using $\mbox{F}_1$ score & 1  & 2  & 3  & 0.5 & 0.9 & 2.2 \\
 \end{tabular}
 \end{table}
 
-Since patients have varying cancer progression speeds, the impact of each schedule also varies with it. In order to highlight these differences we divide results for three types of patients, as per their time of cancer progression. They are \textit{fast, intermediate,} and \textit{slow progressing} patients. Although such a division may be imperfect and can only be done retrospectively in a simulation setting, we do it only for the purpose of illustration. We assume that the \textit{slow progressing} patients, are the 50\% of the total population, having a cancer progression time after the ten year follow-up period of the study (see Figure~\ref{fig:npmle_plot}). We assume \textit{fast progressing} patients, are the patients with an initially misdiagnosed state of cancer \citep{cooperberg2011outcomes}, or high risk patients who choose AS instead of immediate treatment. These are roughly 30\% of the population, having a cancer progression time less than 3.5 years. We label the remaining 20\% patients as \textit{intermediate progressing} patients.  Table \ref{table:fast}, Table \ref{table:intermediate}, and Table \ref{table:slow} show the results for the \textit{fast, intermediate,} and \textit{slow progressing} patients, respectively.
+Since patients have varying cancer progression speeds, the impact of each schedule also varies with it. In order to highlight these differences, we divide results for three types of patients, as per their time of cancer progression. They are \textit{fast, intermediate,} and \textit{slow progressing} patients. Although such a division may be imperfect and can only be done retrospectively in a simulation setting, we show results for these three groups for the purpose of illustration. Roughly 50\% of the patients did not obtain cancer progression in the ten year follow-up period of the simulation study. We assume these patients to be \textit{slow progressing} patients. We assume \textit{fast progressing} patients are the ones with an initially misdiagnosed state of cancer \citep{cooperberg2011outcomes} or high-risk patients who choose AS instead of immediate treatment upon diagnosis. These are roughly 30\% of the population, having a cancer progression time less than 3.5 years. We label the remaining 20\% patients as \textit{intermediate progressing} patients. Table \ref{table:fast}, Table \ref{table:intermediate}, and Table \ref{table:slow} show the results for the \textit{fast, intermediate,} and \textit{slow progressing} patients, respectively.
 
 \begin{table}[!htb]
 \caption{\textbf{Simulation study results for \textit{fast progressing} patients (30\% of all patients)}: Estimated first, second (median), and third quartiles for number of biopsies ($\mbox{Q}^{\mbox{nb}}_1$, $\mbox{Q}^{\mbox{nb}}_2$, $\mbox{Q}^{\mbox{nb}}_3$) and for the delay in detection of cancer progression ($\mbox{Q}^{\mbox{delay}}_1$, $\mbox{Q}^{\mbox{delay}}_2$, $\mbox{Q}^{\mbox{delay}}_3$), in years, for various biopsy schedules. The delay is equal to the difference between the time of the positive biopsy and the unobserved true time of progression. The results in the table are obtained from the \textit{fast progressing} test patients of our simulation study.}
